--- a/web/src/mobile/styles/components/WalletsButtons.pcss
+++ b/web/src/mobile/styles/components/WalletsButtons.pcss
@@ -2,7 +2,7 @@
   align-items: center;
   background: var(--body-background-color);
   border: 0;
-  bottom: 0;
+  bottom: var(--mobile-footer-height);
   display: flex;
   height: 54px;
   justify-content: space-between;
